--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   background-size: cover;
   background-color: #0a0e34;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .header::before {
@@ -48,7 +48,7 @@ body {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   justify-content: space-between;
 }
 
@@ -70,7 +70,6 @@ body {
   font-weight: bold;
   padding: 0 calc(15.625vw - 30px);
   margin: 0;
-  ;
 }
 
 .text-line-one {
@@ -90,16 +89,13 @@ body {
 .links {
   padding: 0 0 70px 0;
   margin: 0 20px;
+  align-self: stretch;
 }
 
 .link {
   color: #ffffff;
   height: calc(11.2vw - 1px);
-  min-height: 35px;
   border-radius: calc(5.6vw - 1px);
-  max-width: 450px;
-  margin-left: auto;
-  margin-right: auto;
   background-color: #5e42b0;
   cursor: pointer;
   display: flex;
@@ -135,6 +131,7 @@ body {
   margin: 0;
   font-size: calc(1.34vw + 4px);
   text-transform: uppercase;
+  display: block;
 }
 
 .bold {
@@ -299,8 +296,7 @@ section p {
 
 .footer {
   background-image: url("../images/game_767.jpg");
-  height: 100vh;
-  min-height: 568px;
+  min-height: 100vh;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -324,10 +320,13 @@ section p {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  min-height: 568px;
+  min-height: 100vh;
   justify-content: space-between;
   align-items: center;
+}
+
+.footer .links {
+  padding: 0;
 }
 
 .app-icon {
@@ -366,20 +365,24 @@ section p {
   text-transform: uppercase;
 }
 
-.footer .links {
-  padding: 0;
-  align-self: stretch;
-}
-
 .footer .logo {
   padding: 0;
   margin-bottom: 10px;
 }
 
+@media (max-width: 640px) and (orientation: landscape) {
+  .header,
+  .header-container,
+  .footer,
+  .footer-container {
+    min-height: 568px;
+  }
+}
+
 @media (min-width: 641px) {
   .header,
   .header-container {
-    min-height: 650px;
+    min-height: 960px;
   }
   .logo {
     height: 55px;
@@ -404,6 +407,12 @@ section p {
   .link-text {
     font-size: 14px;
   }
+  .advice-number {
+    top: -80px;
+    left: 4.3vw;
+    width: 115px;
+    height: 115px;
+  }
   .advice-number span {
     font-size: 24px;
   }
@@ -422,8 +431,7 @@ section p {
   }
   .footer,
   .footer-container {
-    height: 100vh;
-    min-height: 800px
+    min-height: 960px;
   }
   .footer-container {
     justify-content: flex-start;
@@ -455,6 +463,7 @@ section p {
   }
   .footer .logo {
     margin-bottom: 40px
+  }
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -524,7 +533,7 @@ section p {
     right: -10%;
     left: auto;
   }
-   .players h2 {
+  .players h2 {
     margin-bottom: 0px;
     padding-left: 4.3%;
     padding-right: 43%;
@@ -536,12 +545,6 @@ section p {
   .players .growth {
     padding-left: 4.3%;
     padding-right: 43%;
-  }
-  .advice-number {
-    top: -80px;
-    left: 4.3vw;
-    width: 115px;
-    height: 115px;
   }
   .advice-title {
     padding-top: 90px;
@@ -560,7 +563,7 @@ section p {
 @media (min-width: 961px) {
   .header {
     background-image: url("../images/football_1280.jpg");
-  } 
+  }
   h2 {
     font-size: 80px;
     padding: 115px 0 40px;
@@ -578,7 +581,7 @@ section p {
     position: absolute;
     left: 0;
     padding-left: calc(50vw - 600px);
-  } 
+  }
   .athlets h2 {
     margin-bottom: 0px;
     padding-left: calc(50vw + 48px);
@@ -590,7 +593,6 @@ section p {
   .athlets .connection .content {
     padding: 0 calc(50vw - 511px) 0 calc(50vw + 48px);
   }
-  
   h3 {
     font-size: 36px;
     padding: 60px 0px 20px;
@@ -682,15 +684,15 @@ section p {
     display: block;
   }
   .advice-number {
-    width: 17.5%;
-    height: 21.2%;
-    top: calc(25% - (21.2% - 80px));
+    width: 8.75vw;
+    height: 8.07vw;
+    top: calc(25% - (8.07vw - 80px));
   }
   .advice:nth-child(odd) .advice-number {
-    left: calc(17.5% / -2);
+    left: calc(8.75vw / -2);
   }
   .advice:nth-child(even) .advice-number {
-    left: calc(100% + (17.5% / -2));
+    left: calc(100% + (8.75vw / -2));
   }
   .advice:nth-child(odd) .advice-content {
     padding-right: 20.3%;
@@ -729,6 +731,17 @@ section p {
   }
   .link-app-store {
     margin-right: 50px;
+  }
+  .advice-number {
+    width: 168px;
+    height: 155px;
+    top: calc(25% - (75px));
+  }
+  .advice:nth-child(odd) .advice-number {
+    left: calc(-84px);
+  }
+  .advice:nth-child(even) .advice-number {
+    left: calc(100% - 84px);
   }
   .advice-container {
     max-width: 1920px;
